# stable-audio-tools

./: .gitignore  pre_encode.py  pre_encode_defaults.ini  pyproject.toml  setup.py  train.py
examples/hydra_integration/: README.md  demo_config.py
plans/: configuration_modernization_plan.md  data_driven_schema_design.md  factory_methods_analysis.md  uv_migration_plan.md
plans/factory_analysis/: README.md  autoencoder_factory.md  bottleneck_factory.md  conditioning_factory.md  dataset_factory.md  diffusion_factory.md  encoder_decoder_factory.md  language_model_factory.md  loss_factory.md  model_factory.md  pretransform_factory.md  training_factory.md  training_utils_factory.md
plans/training_scripts_analysis/: README.md  defaults_ini_analysis.md  pre_encode_py_analysis.md  train_py_analysis.md
stable_audio_tools/config/: __init__.py
stable_audio_tools/config/hydra/: config.yaml
stable_audio_tools/config/hydra/dataset/: local_training.yaml
stable_audio_tools/config/hydra/experiments/: production_run.yaml  quick_test.yaml
stable_audio_tools/config/hydra/model/: stable_audio_1_0.yaml
stable_audio_tools/config/schemas/: __init__.py  base.py  dataset.py  experiment.py  model.py
stable_audio_tools/data/: dataset.py
stable_audio_tools/models/: autoencoders.py  bottleneck.py  factory.py  pretrained.py  pretransforms.py  utils.py
stable_audio_tools/training/: autoencoders.py  factory.py  utils.py
temp_tests/: test_dataset_config.py  test_experiment_config.py  test_hydra_integration.py  test_model_config.py
