[project]
name = "stable-audio-tools"
version = "0.0.19"
description = "Training and inference tools for generative audio models from Stability AI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Stability AI"},
    {name = "Eduardo Escoto"}
]
urls = {Homepage = "https://github.com/Stability-AI/stable-audio-tools.git"}
dependencies = [
    "alias-free-torch>=0.0.6",
    "auraloss>=0.4.0",
    "descript-audio-codec>=1.0.0",
    "einops>=0.8.1",
    "einops-exts>=0.0.4",
    "ema-pytorch>=0.7.7",
    "encodec>=0.1.1",
    "gradio>=5.20.0",
    "huggingface-hub>=0.33.2",
    "hydra-core>=1.3.2",
    "importlib-resources>=6.5.2",
    "k-diffusion>=0.1.1",
    "laion-clap>=1.1.7",
    "local-attention>=1.11.1",
    "omegaconf>=2.3.0",
    "pandas>=2.3.0",
    "prefigure>=0.0.10",
    "pydantic>=2.11.7",
    "pytorch-lightning>=2.1.0",
    "pywavelets>=1.8.0",
    "safetensors>=0.5.3",
    "sentencepiece>=0.2.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchmetrics>=1.7.3",
    "tqdm>=4.67.1",
    "transformers>=4.53.1",
    "v-diffusion-pytorch>=0.0.2",
    "vector-quantize-pytorch>=1.22.17",
    "wandb>=0.21.0",
    "webdataset>=1.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stable_audio_tools"]
